--- a/index.html
+++ b/index.html
@@ -13,28 +13,28 @@
 <body class="body">
 
   <main class="main">
-    <div class="recipe-container">
-      <div class="img">
+    <div class="recipe">
+      <div class="recipe__image">
         <img src="assets/images/image-omelette.jpeg" alt="recipe-image">
       </div>
-      <div class="content">
-        <div class="summary">
-          <h1 class="title">Simple Omelette Recipe</h1>
-          <p class="description">
+      <div class="recipe__content">
+        <div class="recipe__header">
+          <h1 class="recipe__title">Simple Omelette Recipe</h1>
+          <p class="recipe__description">
             An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.
           </p>
         </div>
-        <div class="preparation-time">
-          <h2 class="title">Preparation time</h2>
-          <ul class="ul list info">
+        <div class="recipe__time">
+          <h2 class="recipe__time-title">Preparation time</h2>
+          <ul class="list list--unordered list--unordered--rose">
             <li><span><b>Total</b>: Approximately 10 minutes</span></li>
             <li><span><b>Preparation</b>: 5 minutes</span></li>
             <li><span><b>Cooking</b>: 5 minutes</span></li>
           </ul>
         </div>
-        <div class="section">
-          <h2 class="title">Ingredients</h2>
-          <ul class="ul list info">
+        <div class="recipe__section">
+          <h2 class="recipe__section-title">Ingredients</h2>
+          <ul class="list list--unordered list--unordered--brown">
             <li><span>2-3 large eggs</span></li>
             <li><span>Salt, to taste</span></li>
             <li><span>Pepper, to taste</span></li>
@@ -43,9 +43,9 @@
           </ul>
         </div>
   
-        <div class="section">
-          <h2 class="title">Instructions</h2>
-          <ol class="ol list info">
+        <div class="recipe__section">
+          <h2 class="recipe__section-title">Instructions</h2>
+          <ol class="list list--ordered list--ordered--brown ">
             <li><span><b>Beat the eggs</b>: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</span></li>
             <li><span><b>Heat the pan</b>: Place a non-stick frying pan over medium heat and add butter or oil.</span</li>
             <li><span><b>Cook the omelette</b>: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</span></li>
@@ -55,11 +55,11 @@
           </ol>
         </div>
   
-        <div class="section">
-          <h2 class="title">Nutrition</h2>
-          <div class="info">
-            <p>The table below shows nutritional values per serving without the additional fillings.</p>
-            <table class="nutrition-table">
+        <div class="recipe__section">
+          <h2 class="recipe__section-title">Nutrition</h2>
+          <div>
+            <p class="recipe__nutrition-description">The table below shows nutritional values per serving without the additional fillings.</p>
+            <table class="recipe__nutrition-table">
               <tr>
                 <td>Calories</td>
                 <td>277kcal</td>
